--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -1648,6 +1648,10 @@ ul.root-ul {
     }
 }
 
+.ace_editor_readonly {
+    background: @mondrian-darker-black-01 !important;
+}
+
 .ace_tooltip {
     background: @bg-website-color !important;
     max-height: 425px !important;
@@ -2076,7 +2080,7 @@ div.hljs {
 
 // PREFERENCES STYLES
 .preferences {
-    select#listvis, select#listhid {
+    select#listvis, select#listhid, select#searchvis, select#searchhid, select#actionvis, select#actionhid {
         background-color: @background-color;
         
         option {
