--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -1558,15 +1558,15 @@ ul.root-ul {
     border-color: @border-color !important;
 }
 
+.ace_editor_readonly {
+    background: @mondrian-light-black-01 !important;
+}
+
 .ace_tooltip {
     background: @bg-website-color !important;
     max-height: 425px !important;
     color: @text-color !important;
 }
-
-// .user-dashboard > .tabs > .tab-content > .tab-pane.active {
-// 	background: @bg-website-color !important;
-// }
 
 .user-dashboard > .tabs > .tab-content > .tab-pane.active > .panel-card > .card {
     background: #F8F7F6 !important;
