guide improved styles

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -2145,3 +2145,27 @@ div.hljs {
         background: @layer1-color;
     }
 }
+
+// TOUR GUIDE STYLES
+.guide-tooltip {
+    min-width: 20rem;
+    max-width: 40rem;
+    
+    .card {
+        margin-bot: 0 !important;
+        border-radius: 0 !important;
+        
+        .card-header {
+            border-radius: 0 !important;
+        }
+        
+        .card-header, .card-body {
+            padding: 1rem !important;
+        }
+        
+        .card-footer {
+            padding: .8rem 1rem !important;
+        }
+    }
+}
+
