--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -1657,3 +1657,26 @@ ul.root-ul {
         }
     }
 }
+
+// TOUR GUIDE STYLES
+.guide-tooltip {
+    min-width: 20rem;
+    max-width: 40rem;
+    
+    .card {
+        margin-bot: 0 !important;
+        border-radius: 0 !important;
+        
+        .card-header {
+            border-radius: 0 !important;
+        }
+        
+        .card-header, .card-body {
+            padding: 1rem !important;
+        }
+        
+        .card-footer {
+            padding: .8rem 1rem !important;
+        }
+    }
+}
